# uldren-loom

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TLS.md  _QUEUE_TEMPLATE.md  _SESSION_PROMPTS.md  _TEMP.md  _TEST_PLAN.md  clippy.toml  cog.toml  deny.toml  justfile  tls.sh
bindings/android/: CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
bindings/android/native/: uldren_loom_jni.c
bindings/cpp/: CMakeLists.txt  README.md
bindings/cpp/example/: main.cpp
bindings/cpp/include/: loom.hpp
bindings/cpp/include/loom/: batch.hpp  detail.hpp  engine.hpp  error.hpp  prelude.hpp  result.hpp  sql.hpp  (+2 more)
bindings/cpp/test/: main.cpp
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package.json  test.mjs
bindings/node/src/: admin.rs  archive.rs  calendar_fns.rs  cas.rs  chat.rs  columnar.rs  contacts_fns.rs  daemon_fns.rs  dataframe.rs  document.rs  drive.rs  files.rs  graph.rs  kv.rs  lanes.rs  ledger.rs  lib.rs  mail_fns.rs  meetings.rs  pages.rs  queue.rs  search.rs  sql.rs  telemetry.rs  tickets.rs  timeseries.rs  vcs.rs  vector.rs  workspace.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: admin.rs  archive.rs  calendar_fns.rs  cas.rs  chat.rs  columnar.rs  contacts_fns.rs  daemon_fns.rs  dataframe.rs  document.rs  drive.rs  files.rs  graph.rs  kv.rs  lanes.rs  ledger.rs  lib.rs  mail_fns.rs  meetings.rs  pages.rs  queue.rs  search.rs  sql.rs  telemetry.rs  tickets.rs  timeseries.rs  vcs.rs  vector.rs  workspace.rs
bindings/python/tests/: test_loom.py
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/browser-test/: index.html  run.mjs  worker.js
bindings/wasm/src/: lib.rs  opfs_sql.rs
crates/loom-chat/: Cargo.toml
crates/loom-chat/src/: lib.rs
crates/loom-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-cli/examples/: pim_cert_seed.rs
crates/loom-cli/src/: audit_cmd.rs  certificate_cmd.rs  cli.rs  context_cmd.rs  daemon_cmd.rs  exec_cmd.rs  helpers.rs  locator_cx.rs  main.rs  management_cmd.rs  network_access_cmd.rs  refs_cmd.rs  remote.rs  serve_cmd.rs  table_cmd.rs  tls_crypto.rs
crates/loom-client/: Cargo.toml
crates/loom-client/src/: generated_api.rs  lib.rs  local.rs  result_view.rs  service.rs  types.rs
crates/loom-codec/: Cargo.toml
crates/loom-codec/src/: lib.rs  tests.rs
crates/loom-columnar/: Cargo.toml
crates/loom-columnar/src/: arrow.rs  lib.rs
crates/loom-compute/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-compute/src/: authz.rs  capability.rs  derivation.rs  engine.rs  engine_wasmi.rs  engine_wasmtime.rs  error.rs  facade.rs  gate.rs  guard.rs  lib.rs  manifest.rs  program_lifecycle.rs  state_access.rs  statechart.rs  template_engine.rs  trigger_exec.rs  workflow.rs
crates/loom-conformance/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-conformance/src/: behavior.rs  lib.rs  studio_imports.rs
crates/loom-coordination/: Cargo.toml
crates/loom-coordination/src/: lib.rs
crates/loom-core/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-core/examples/: dump_vectors.rs
crates/loom-core/src/: acl.rs  calendar.rs  capability.rs  cas.rs  cbor.rs  change_set.rs  chunk.rs  columnar.rs  columnar_arrow.rs  contacts.rs  dataframe.rs  delivery.rs  digest.rs  document.rs  error.rs  fs.rs  graph.rs  hooks.rs  identity.rs  inference.rs  keys.rs  kv.rs  ledger.rs  lib.rs  lock.rs  log.rs  logs.rs  mail.rs  metrics.rs  object.rs  optional_runtime.rs  prolly.rs  provider.rs  runtime.rs  search.rs  sync.rs  tabular.rs  timeseries.rs  traces.rs  triggers.rs  (+5 more)
crates/loom-core/tests/: core.rs
crates/loom-dataframe/: Cargo.toml
crates/loom-dataframe/src/: lib.rs
crates/loom-delivery/: Cargo.toml
crates/loom-delivery/src/: lib.rs
crates/loom-drive/: Cargo.toml
crates/loom-drive/src/: lib.rs
crates/loom-ffi/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-ffi/src/: archive.rs  calendar.rs  cas.rs  chat.rs  columnar.rs  contacts.rs  dataframe.rs  direct.rs  document.rs  drive.rs  files.rs  fsdir.rs  graph.rs  kv.rs  lanes.rs  ledger.rs  lib.rs  logs.rs  macros.rs  mail.rs  meetings.rs  metrics.rs  pages.rs  program.rs  queue.rs  replay.rs  restore.rs  result_render.rs  search.rs  sql_session.rs  tags.rs  tests.rs  tickets.rs  timeseries.rs  traces.rs  triggers.rs  vector.rs
crates/loom-ffi/tests/: abi_contract.rs
crates/loom-hnsw/: Cargo.toml  README.md
crates/loom-hnsw/src/: lib.rs
crates/loom-hosted/: Cargo.toml
crates/loom-hosted-core/: Cargo.toml
crates/loom-hosted-core/src/: generated_dispatch.rs  http.rs  lib.rs  network_access.rs  remote.rs  remote_carrier.rs  remote_http.rs
crates/loom-hosted-core/tests/: generated_dispatch_pages_chat.rs  remote_carrier.rs
crates/loom-hosted-pim/: Cargo.toml
crates/loom-hosted-pim/src/: dav.rs  imap.rs  jmap.rs  lib.rs  pim.rs  smtp.rs
crates/loom-hosted-pim/tests/: jmap_router.rs
crates/loom-hosted/proto/: loom_hosted_v1.proto
crates/loom-hosted/src/: admin.rs  archive.rs  chat.rs  data.rs  drive.rs  external_auth.rs  grpc.rs  imap.rs  jmap.rs  jsonrpc.rs  kafka_wire.rs  lanes.rs  lib.rs  meetings.rs  memcached.rs  mysql_wire.rs  neo4j_wire.rs  pg_wire.rs  pim.rs  redis.rs  reference.rs  rest.rs  result_handles.rs  serve.rs  smtp.rs  sql.rs  substrate_changes.rs  tickets.rs  vector_compat.rs  watch.rs
crates/loom-inference/: Cargo.toml
crates/loom-inference/src/: activation.rs  browser.rs  candle_runtime.rs  catalog.rs  compat.rs  genai.rs  hardware.rs  hf.rs  instances.rs  inventory.rs  jobs.rs  lib.rs  llama_cpp.rs  mlx.rs  ollama.rs  runtimes.rs
crates/loom-inference/tests/: http_fixture.rs  network_smoke.rs
crates/loom-interchange/: Cargo.toml
crates/loom-interchange-io/: Cargo.toml
crates/loom-interchange-io/src/: lib.rs  profiles.rs  transfer.rs
crates/loom-interchange/src/: lib.rs
crates/loom-lanes/: Cargo.toml
crates/loom-lanes/src/: lib.rs
crates/loom-lifecycle/: Cargo.toml
crates/loom-lifecycle/src/: lib.rs
crates/loom-locator/: Cargo.toml
crates/loom-locator/src/: lib.rs
(+893 files in other folders)
